# ifinmail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deep-research-report.md  deploy_validation.ipynb  docker-compose.yml  ifinmail-web.service  ifinmail_proposal.md  package-lock.json  parcel-tracking.md  preload.js  pyproject.toml  run.sh  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 34d18dec40b2_add_filter_rules_table.py  401194956f3d_add_messages_table.py  b8a4cdbfa7a5_add_attachments_table.py  c9e8d7f6a5b4_add_domain_verification_columns.py  d3e4f5a6b7c8_add_sso_states_table.py  e9e8b03f298b_initial_schema.py  f5d8e2c1a4b3_add_admin_fields_and_tables.py  f7a8b9c0d1e2_add_org_alias_provisioning.py
desktop/: Makefile  ifinmail.desktop  main.js  package.json
desktop/assets/: icon.icns
desktop/scripts/: generate_icons.py
docker/dovecot/: Dockerfile  entrypoint.sh
docker/dovecot/conf/: dovecot.conf
docker/postfix/: Dockerfile  entrypoint.sh
docker/postfix/conf/: main.cf  master.cf
docker/rspamd/: Dockerfile
guide/: README.md
guide/week_01/: README.md
guide/week_02/: README.md
guide/week_03/: README.md
guide/week_04/: README.md
guide/week_05/: README.md
guide/week_06/: README.md
guide/week_07/: README.md
guide/week_08/: README.md
guide/week_09/: README.md
guide/week_10/: README.md
guide/week_11/: README.md
guide/week_12/: README.md
ifinmail/: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  PROVISIONING_ANALYSIS.md  README.md  branding_overrides.json  db.sqlite3  manage.py
ifinmail/backend/config/: asgi.py  branding.py  server_context.py  urls.py  user_context.py  wsgi.py
ifinmail/backend/services/: apps.py  audit.py  deliverability.py  models.py  monitoring.py
ifinmail/backend/tests/: test_urls.py
ifinmail/docs/: 00-TOC.md  01-auth-session.md  02-database-data.md  03-api-web-security.md  04-dns-provider.md  05-email-infrastructure.md  06-file-storage.md  07-monitoring-observability.md  08-backup-disaster-recovery.md  09-deployment-infrastructure.md  TEMPLATE-VIEW-EDGE-CASES.md
ifinmail/frontend/static/: manifest.json
ifinmail/frontend/templates/: 400.html  403.html  404.html  500.html  502.html  503.html  504.html  base.html  error_base.html  landing.html  privacy.html  terms.html
ifinmail/provisioning/: .env.example  cloud-init.yaml
ifinmail/provisioning/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sh
ifinmail/provisioning/fail2ban/: jail.local
ifinmail/provisioning/scripts/: backup_full.sh  bootstrap.sh  deploy.sh  firewall.sh  monitor.py  obtain-ssl.sh  provision.sh  restore_test.sh  setup-wizard.sh
ifinmail/requirements/: base.txt  development.txt
ifinmail/scratch/: auth_visual_check.py  create_unmanaged_tables.py  seed_db.py
ifinmail/scratch/playwright-auth-report/: login.html  metrics.json  password-reset.html  (+4 more)
ifinmail/templates/: 404.html  500.html  base.html  demo.html
rust/: Cargo.toml
rust/src/: crypto.rs  lib.rs  mail_parse.rs  policy.rs  sync.rs
src/: vapid_keys.json
src/ifinmail/: __main__.py
tests/: conftest.py  test_2fa.py  test_admin.py  test_ai_assistant.py  test_api_keys.py  test_attachments.py  test_auth.py  test_contacts.py  test_intelligence.py  test_mail.py  test_organizations.py  test_payments.py  test_sandbox.py  test_settings.py  test_smtp_handler.py  test_spam.py  test_templates.py  test_verify.py  test_webhooks.py
versions/: ed8923dbff01_add_scheduling_tables.py  f6a7b8c9d0e1_add_webhooks_and_audit_logs.py
(+364 files in other folders)
