[project]
name = "ifinmail-app"
version = "0.1.0"
description = "A secure, API-first email platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "python-multipart>=0.0.18",
    "aiosmtpd>=1.4",
    "python-dotenv>=1.0",
    "dnspython>=2.7",
    "apscheduler>=3.10",
    "dkimpy>=1.1",
    "fpdf2>=2.8",
    "httpx>=0.28",
    "pyotp>=2.9",
    "qrcode>=7.4",
]

[project.scripts]
ifinmail = "ifinmail.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.8",
    "coverage>=7",
    "pytest-cov>=5",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/ifinmail/smtp/handler.py" = ["N802"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.13"
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ifinmail.api.*"
# SQLAlchemy legacy Column API triggers false positives on attribute assignments/arg-types
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
