[package]
name = "ifinmail-core"
version = "0.1.0"
edition = "2024"
description = "Core Rust library for the ifinmail email platform"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Mail parsing
mail-parser = "0.9"
mime = "0.3"
base64 = "0.22"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
ed25519-dalek = "2"
rsa = "0.9"
sha2 = "0.10"
hkdf = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for sync engine)
tokio = { version = "1", features = ["full"] }

# IMAP
async-imap = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"

# Error handling
thiserror = "2"

[dev-dependencies]
hex = "0.4"
